--- a/src/index.html
+++ b/src/index.html
@@ -3,22 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <title>Search image</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="">
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
-    <img src="./images/cn1.jpg" alt="">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quia nisi veritatis culpa, minima dignissimos voluptatibus repellendus optio est tenetur recusandae, provident, vel possimus quo! Exercitationem fuga eos perspiciatis libero.</p>
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <include src="./partials/form.html"></include>
+    <include src="./partials/gallery.html"></include>
     <script src="./index.js"></script>
   </body>
 </html>
- 
